small design change

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/aceprofinder.png" class="img-responsive" alt="Aceprofinder.com">
+                        <img src="img/portfolio/aceprofinder.png" class="img-responsive portfolio-images" alt="Aceprofinder.com">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -131,7 +131,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/artport.png" class="img-responsive" alt="Artport.me">
+                        <img src="img/portfolio/artport.png" class="img-responsive portfolio-images" alt="Artport.me">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -141,7 +141,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/gplayer.png" class="img-responsive" alt="Gplayer.fm">
+                        <img src="img/portfolio/gplayer.png" class="img-responsive portfolio-images" alt="Gplayer.fm">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -151,7 +151,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/supercowpowers.png" class="img-responsive" alt="SuperCowPowers">
+                        <img src="img/portfolio/supercowpowers.png" class="img-responsive portfolio-images" alt="SuperCowPowers">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -161,7 +161,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/minyadi.png" class="img-responsive" alt="Minyadi">
+                        <img src="img/portfolio/minyadi.png" class="img-responsive portfolio-images" alt="Minyadi">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -171,7 +171,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/seedthechange.png" class="img-responsive" alt="Minyadi">
+                        <img src="img/portfolio/seedthechange.png" class="img-responsive portfolio-images" alt="Minyadi">
                     </a>
                 </div>
             </div>
@@ -346,7 +346,7 @@
                         <div class="modal-body">
                             <h2>Artport</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/artport.png" class="img-responsive img-centered portfolio-images" alt="Artport.me">
+                            <img src="img/portfolio/artport.png" class="img-responsive img-centered " alt="Artport.me">
                             <p>Artport.me is a common collaboration place for all artists - Musicians, Photographers etc. With a super easy UI , it helps similar minded artists to get along and communicate.</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
@@ -381,7 +381,7 @@
                         <div class="modal-body">
                             <h2>Gplayer</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/gplayer.png" class="img-responsive img-centered portfolio-images" alt="Gplayer.fm">
+                            <img src="img/portfolio/gplayer.png" class="img-responsive img-centered " alt="Gplayer.fm">
                             <p>A Backbone and Django based Music Player Web app. The music is mostly African. Make a playlist or listen to Guest Mixes. You embed a playlist anywhere as well</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
@@ -416,7 +416,7 @@
                         <div class="modal-body">
                             <h2>WorkBench</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/supercowpowers.png" class="img-responsive img-centered portfolio-images" alt="">
+                            <img src="img/portfolio/supercowpowers.png" class="img-responsive img-centered " alt="">
                             <p>Home page for an awesome Open Source Security Research Organisation. They are currently working on an exciting security framework Called <a href="http://workbench.rtfd.org/">WorkBench</a> especially for researchers.</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
@@ -451,7 +451,7 @@
                         <div class="modal-body">
                             <h2>Minyadi</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/minyadi.png" class="img-responsive img-centered portfolio-images" alt="">
+                            <img src="img/portfolio/minyadi.png" class="img-responsive img-centered " alt="">
                             <p>Minyadi is an e-commerce platform for sell handmade arts and crafts. It has an EBay style, meaning, users can sell and buy products at the same time. They can build their own shops and sell their own craft. Its a work in progress, but do go over the app, and signup.
                             </p>
                             <ul class="list-inline item-details">
@@ -487,7 +487,7 @@
                         <div class="modal-body">
                             <h2>Seed The Change</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/seedthechange.png" class="img-responsive img-centered portfolio-images" alt="Seedthechange.org">
+                            <img src="img/portfolio/seedthechange.png" class="img-responsive img-centered " alt="Seedthechange.org">
                             <p>Seed The Change exists to help small businesses make a difference in the world by helping them plant trees as they grow.</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
