--- a/index.html
+++ b/index.html
@@ -32,23 +32,6 @@
 </head>
 
 <body id="page-top" class="index">
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '1625266361018206',
-          xfbml      : true,
-          version    : 'v2.2'
-        });
-      };
-
-      (function(d, s, id){
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement(s); js.id = id;
-         js.src = "//connect.facebook.net/en_US/sdk.js";
-         fjs.parentNode.insertBefore(js, fjs);
-       }(document, 'script', 'facebook-jssdk'));
-    </script>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -172,6 +155,36 @@
                             </div>
                         </div>
                         <img src="img/portfolio/seedthechange.png" class="img-responsive portfolio-images" alt="Minyadi">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/docnav.png" class="img-responsive portfolio-images" alt="Docnav">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/appcodes.png" class="img-responsive portfolio-images" alt="AppCodes">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/speedyvenues.png" class="img-responsive portfolio-images" alt="Speedy Venues">
                     </a>
                 </div>
             </div>
@@ -509,6 +522,113 @@
         </div>
     </div>
 
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>DocNav App</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/docnav.png" class="img-responsive img-centered " alt="Docnavapp.com">
+                            <p>DocNav makes it easy to navigate, search, and analyze complex legal documents</p>
+                            <ul class="list-inline item-details">
+                                <li>Url:
+                                    <strong><a href="https://www.docnavapp.com/">https://www.docnavapp.com/</a>
+                                    </strong>
+                                </li>
+                                <li>Technologies Used:
+                                    <strong>Python, Django, Backbone.Js, PDF.js, Stripe</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web Development</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>AppCodes</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/appcodes.png" class="img-responsive img-centered " alt="Appcodes.com">
+                            <p>App Store Optimization Tool. Gets you more data for better decision making.</p>
+                            <ul class="list-inline item-details">
+                                <li>Url:
+                                    <strong><a href="http://www.appcodes.com/">http://www.appcodes.com/</a>
+                                    </strong>
+                                </li>
+                                <li>Technologies Used:
+                                    <strong>Python, Flask, Braintree, Jquery</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web Development</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Speedy Venues</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/speedyvenues.png" class="img-responsive img-centered " alt="SpeedyVenues.com">
+                            <p>Venue listing website for ease in party bookings. Real time availability also available.</p>
+                            <ul class="list-inline item-details">
+                                <li>Url:
+                                    <strong><a href="http://www.speedyvenues.com/">http://www.speedyvenues.com/</a>
+                                    </strong>
+                                </li>
+                                <li>Technologies Used:
+                                    <strong>Python, Django, Heroku</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web Development</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
