--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     </div>
 
     <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -344,7 +344,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -469,7 +469,7 @@
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Url:
-                                    <strong><a href="http://minyadi.com">Minyadi.com</a>
+                                    <strong><a href="http://www.minyadi.com">Minyadi.com</a>
                                     </strong>
                                 </li>
                                 <li>Technologies:
