--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <!-- <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -106,7 +106,7 @@
                         </div>
                         <img src="img/portfolio/aceprofinder.png" class="img-responsive portfolio-images" alt="Aceprofinder.com">
                     </a>
-                </div>
+                </div> -->
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
