added glowlit info

--- a/index.html
+++ b/index.html
@@ -187,6 +187,16 @@
                         <img src="img/portfolio/speedyvenues.png" class="img-responsive portfolio-images" alt="Speedy Venues">
                     </a>
                 </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/glowlit.png" class="img-responsive portfolio-images" alt="Glowlit">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -219,13 +229,13 @@
                         <li>Flask</li>
                         <li>Javascript</li>
                         <li>Node.Js</li>
-                        <li>Angular.jS</li>
-                        <li>PhoneGap</li>
+                        <li>BlockChain</li>
+                        <li>AR/VR</li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
                     <ul>
-                        <li>BackBone JS</li>
+                        <li>Nginx</li>
                         <li>Redis</li>
                         <li>MongoDb</li>
                         <li>Mysql</li>
@@ -593,7 +603,6 @@
             </div>
         </div>
     </div>
-
     <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -620,6 +629,41 @@
                                 </li>
                                 <li>Service:
                                     <strong>Web Development</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Glowlit.org</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/glowlit.png" class="img-responsive img-centered " alt="Glowlit image">
+                            <p></p>
+                            <ul class="list-inline item-details">
+                                <li>Url:
+                                    <strong><a href="https://glowlit.org/">https://glowlit.org/</a>
+                                    </strong>
+                                </li>
+                                <li>Technologies Used:
+                                    <strong>Python, Django, AWS, React, Nginx, PostgreSQL</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web Development, Consultancy, Full Stack Development </strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
