Add css to univ href

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <p>Namaste! My name is Ankush Chadda from Agra, India.<br><br>
 
-                    I am a Computer Science Enginnering Graduate from <a href="https://www.uietkuk.ac.in/">UIET, Kurukshetra University</a>. I consult and develop complex and exciting applications. I have expertise in providing end to end technical solutions to complex business applications.<br><br>
+                    I am a Computer Science Enginnering Graduate from <a style="color:wheat;" href="https://www.uietkuk.ac.in/">UIET, Kurukshetra University</a>. I consult and develop complex and exciting applications. I have expertise in providing end to end technical solutions to complex business applications.<br><br>
 
                     I believe web to be a powerful platform to collaborate and innovate, hence most of my work is web oriented.<br><br>
 
