--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                <p>If you're interested in contacting me, whether it's just to say hi, to ask for a little help, or tell me about a new project you'd like to work together, you can send me an email at <a href="mailto:contact@aoswebsolutions.com">contact@aoswebsolutions.com.</a></p>
+                <p>If you're interested in contacting me, whether it's just to say hi, to ask for a little help, or tell me about a new project you'd like to work together, you can send me an email at <a href="mailto:aoswebdevelopers@gmail.com">aoswebdevelopers@gmail.com.</a></p>
 
                 I try to answer every message I get, so don’t hesitate to get in touch!
                 </div>
@@ -302,7 +302,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Ankush Chadda 2015
+                        Copyright &copy; Ankush Chadda 2020
                     </div>
                 </div>
                 <div class="row">
