--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/freelancer.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
@@ -55,9 +55,9 @@
                     <li class="page-scroll">
                         <a href="http://blog.ankushchadda.in">Blog</a>
                     </li>
-                    <li class="page-scroll">
+                    <!-- <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
-                    </li>
+                    </li> -->
                     <li class="page-scroll">
                         <a href="#about">About Me</a>
                     </li>
@@ -86,7 +86,7 @@
         </div>
     </header>
 
-    <!-- Portfolio Grid Section -->
+    <!-- Portfolio Grid Section 
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -94,9 +94,9 @@
                     <h2>Portfolio</h2>
                     <hr class="star-primary">
                 </div>
-            </div>
+            </div> 
             <div class="row">
-                <!-- <div class="col-sm-4 portfolio-item">
+                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -105,7 +105,7 @@
                         </div>
                         <img src="img/portfolio/aceprofinder.png" class="img-responsive portfolio-images" alt="Aceprofinder.com">
                     </a>
-                </div> -->
+                </div> 
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -199,6 +199,8 @@
             </div>
         </div>
     </section>
+    -->
+    <hr />
 
     <!-- About Section -->
     <section class="success" id="about">
@@ -278,16 +280,19 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="http://facebook.com/iamkhush" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="http://facebook.com/iamkhush" class="btn-social btn-outline"><i class="fab fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/iamkhush" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/iamkhush" class="btn-social btn-outline"><i class="fab fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="https://in.linkedin.com/in/iamkhush" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://in.linkedin.com/in/iamkhush" class="btn-social btn-outline"><i class="fab fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com/iamkhush" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/iamkhush" class="btn-social btn-outline"><i class="fab fa-fw fa-github"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://medium.com/@iamkhush" class="btn-social btn-outline"><i class="fab fa-fw fa-medium"></i></a>
                             </li>                              
                         </ul>
                     </div>
